--- a/tesla.css
+++ b/tesla.css
@@ -2,6 +2,9 @@
     margin: 0px;
     box-sizing: border-box;
 }
+body {
+    min-width: 100%;
+}
 .page1 {
     background-image: url(Homepage-Model-3-Desktop-US.avif);
     width: 100%;
